--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -32,17 +32,33 @@ html {
 
 .word-container {
     display: flex;
+    flex-wrap: wrap;
     float: none;
+}
+
+.letter-container {
+    flex: 1;
+    border-bottom: 2px solid teal;
+    margin: 5px;
 }
 
 .letter {
     flex: 1;
-    border-bottom: 2px solid cyan;
     margin: 10px;
     text-align: center;
     font-size: 4em;
 }
 
 .hide { /*class to toggle on individual div letter boxes*/
-    display: none;
+    opacity: 0;
 }
+
+/* .underline {
+    flex: 1;
+    position: relative;
+    top: 6em;
+    right: 55px;
+    height: 3px;
+    background-color: rgb(5, 227, 235);
+    width: 100%;
+} */
