--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,9 +10,13 @@ html {
 
 .siimple-grid { /*IF CANNOT UNDERSTAND SIIMPLE CONTAINER SYSTEM - STYLE THE GRID AND USE MEDIA QUERIES ACCORDINGLY */
     max-width: 1200px;
+    min-width: 720px;
     background-color: rgba(255,255,255, 0.75);
 }
 
+.siimple-jumbotron {
+    padding: 80px 0;
+}
 .word {
     display: flex;
 }
@@ -37,6 +41,7 @@ html {
 }
 
 .letter-container {
+    display: flex;
     flex: 1;
     border-bottom: 2px solid teal;
     margin: 5px;
